# Rootex

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  ASSETS.md  Build.bat  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  GenerateCache.bat  LICENSE  README.md  Run.bat  Setup.bat  Setup.sh  THIRDPARTY.md  appveyor.yml  assets.bat  build.bat  build_fonts.bat  clang-format  generate_cache.bat  imgui.ini  rootex.root
editor/: CMakeLists.txt  editor.app.json  editor.cpp  editor.h  editor_application.cpp  editor_application.h  editor_events.h  editor_main.cpp  editor_system.cpp  editor_system.h  export.template.json  main.cpp  project.lua  project_manager.cpp
editor/config/: config.lua  editor_config.lua
editor/entities/: camera.entity.json  grid.entity.json
editor/gui/: audio_player.cpp  audio_player.h  classes_dock.cpp  classes_dock.h  content_browser.cpp  content_browser.h  file_editor.cpp  file_editor.h  file_system_dock.cpp  file_system_dock.h  file_viewer.cpp  file_viewer.h  hierarchy_dock.cpp  hierarchy_dock.h  image_viewer.cpp  image_viewer.h  inspector_dock.cpp  inspector_dock.h  material_viewer.cpp  material_viewer.h  output_dock.cpp  output_dock.h  resource_selector.cpp  resource_selector.h  scene_dock.cpp  scene_dock.h  text_viewer.cpp  text_viewer.h  toolbar_dock.cpp  toolbar_dock.h  viewport_dock.cpp  viewport_dock.h
editor/saves/: Cube.entity.json  Root.entity.json
game/: CMakeLists.txt  game.app.json  game_application.cpp  game_application.h  game_main.cpp  main.cpp  project.lua  startup.lua
game/assets/: Male_Casual.fbx  free3Dmodel.dae  office.fbx  sandstorm.efkefc  sunset.dds  sword.efkefc
game/assets/classes/: camera.entity.json  cube.entity.json
game/assets/config/: physics.lua  test.lua  window.lua
game/assets/effects/: sine.efkefc  sine.efkmat  sine.efkmatd
game/assets/fonts/: lato_30_bold.spritefont  lato_30_italic.spritefont  lato_30_regular.spritefont  noto_sans_50_bold.spritefont  noto_sans_50_italic.spritefont  noto_sans_50_regular.spritefont
game/assets/materials/: 16___default.rmat  Akai_MAT.rmat  Alpha_Body_MAT.rmat  Alpha_Joints_MAT.rmat  Coffee.rmat  Condensation.rmat  Door.rmat  Eyes.rmat  Fence.rmat  Foothpath.rmat  Glass.rmat  Grass.rmat  GridMaterial.rmat  Hair.rmat  Landscape.rmat  Material.002.rmat  Material.003.rmat  Material.005.rmat  Material.006.rmat  Material.rmat  Material_64.001.rmat  Material_68.001.rmat  Material_68.rmat  Material__298.rmat  Pants.rmat  Road.rmat  Rock.rmat  Roof.002.rmat  Shirt.rmat  Skin.rmat  Socks.rmat  Spder_bot.rmat  Tree.rmat  VasePlant.rmat  Window.rmat  Window_aligment.rmat  animation_material.rmat  arch.rmat  arch_szadi.p.rmat  blue.rmat  (+75 more)
game/assets/scenes/: box.scene.json  decal.scene.json  dialogue.scene.json  effekseer.scene.json  fade_to_black.scene.json  flipbook.scene.json  link.scene.json  loading.scene.json  loading_screen.scene.json  mesh_collision.scene.json  model.scene.json  pass_down.scene.json  pause.scene.json  pauseUI.scene.json  physics.scene.json  point_light.scene.json  script_test.scene.json  sprite_test.scene.json  teapot.scene.json  test.scene.json  trigger.scene.json  tween_test.scene.json
game/assets/scripts/: attenuation_test.lua  ball.lua  characters.lua  cube.lua  cube2.lua  fail_game_text.lua  flappy_bird.lua  follow.lua  fps_display.lua  level_change.lua  loading.lua  new_player_control.lua  new_script_test.lua  pause.lua  player_control.lua  rotator.lua  script_test1.lua  script_test2.lua  sound_test.lua  state_machine.lua  trigger.lua  trigger_test.lua  tutorial_camera.lua  tween_test.lua
game/assets/shaders/: test.hlsl  test_pixel_shader.hlsl  test_vertex_shader.hlsl
game/assets/stories/: game.ink
game/assets/test/: animal.mtl  cube.entity.json  cube.lua  cube_entity.lua  directional_light.lua  entity.lua  glass.mtl  grass.lua  light.lua  lua_test.lua  point_light.lua  (+3 more)
game/config/: post_initialize.lua
game/systems/: debug_system.cpp  debug_system.h  game_render_system.cpp  game_render_system.h
rootex/: .clang-format  CMakeLists.txt  rootex.i
rootex/app/: CMakeLists.txt  application.cpp  application.h  application_settings.cpp  application_settings.h  level_manager.cpp  level_manager.h  project_manager.cpp  project_manager.h
rootex/assets/: character.dae  default.rml  rootex_logo.ai  toon.efkefc
rootex/avl/: CMakeLists.txt  application.cpp  application.h
rootex/common/: CMakeLists.txt  common.cpp  common.h  types.cpp  types.h
rootex/core/: CMakeLists.txt  event.cpp  event.h  event_handler.cpp  event_handler.h  event_manager.cpp  event_manager.h  input_manager.cpp  input_manager.h  language-locale.cpp  language-locale.h  language_locale.cpp  language_locale.h  locale.cpp  locale.h  random.cpp  random.h  resource.cpp  resource.h  resource_data.cpp  resource_data.h  resource_data_reserve.cpp  resource_data_reserve.h  resource_file.cpp  resource_file.h  resource_loader.cpp  resource_loader.h  resource_manager.cpp  resource_manager.h  state_manager.cpp  state_manager.h  windows_utils.h
rootex/framework/: CMakeLists.txt  component.cpp  component.h  ecs_factory.cpp  ecs_factory.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  system.cpp  system.h
rootex/main/: CMakeLists.txt  main.cpp  splash_window.cpp  splash_window.h  window.cpp  window.h
rootex/os/: CMakeLists.txt  os.cpp  os.h  thread.cpp  thread.h  timer.cpp  timer.h
rootex/pch/: CMakeLists.txt  common_pch.h
rootex/scene/: CMakeLists.txt  camera_node.cpp  camera_node.h  cube_test_node.cpp  cube_test_node.h  root_node.cpp  root_node.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h  sky_box.cpp  sky_box.h
rootex/script/: CMakeLists.txt  class.lua  debugger.lua  interpreter.cpp  interpreter.h  script.cpp  script.h  script_env.lua  tweener.h
rootex/serialize/: CMakeLists.txt
rootex/test/: abc.txt
rootex/utility/: CMakeLists.txt  component_array.h  component_array_iterator.h  custom_iterator.h  imgui_helpers.cpp  imgui_helpers.h  maths.cpp  maths.h
(+1691 files in other folders)
